# PCSnapshot

./: .gitignore  AGENTS.md  COWORK_TERMINAL_TEST.md  COWORK_TEST_PLAN.md  DEBUG_LEDGER.md  DEBUG_PLAN.md  LICENSE  README.md  TERMINAL_OBSERVATIONS.md  TERMINAL_TEST_CHECKLIST.md  index.html  package-lock.json  package.json  project_overview.md  vite.config.ts
companion-extension/: README.md  manifest.chromium.json  manifest.firefox.json  native-host-manifest.chromium.template.json  native-host-manifest.firefox.template.json
companion-extension/scripts/: build-chromium.mjs  register-chromium-host.ps1
companion-extension/src/: background.js  capture.js  restore.js
companion-extension/test/: capture.test.js  restore.test.js
design/: ui-redesign-brief.md
docs/launch/: 01-product-brief.md  02-market-research.md  03-commercial-strategy.md  04-21-day-launch-plan.md  05-landing-page-copy.md  06-launch-checklists.md  07-long-term-growth-plan.md  08-solo-6-month-timeline.md  README.md  pc-snapshot-launch-plan.ics
features/completed/: capture_engine.md  context_extraction.md  explorer_window_restore.md  ignorelist.md  macro_layer.md  recapture_session.md  restore_engine.md  (+4 more)
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: active_session.rs  activity.rs  browser.rs  browser_bridge.rs  capture.rs  classify.rs  config.rs  context.rs  explorer.rs  icons.rs  lib.rs  main.rs  restore.rs  terminal.rs  terminal_hook.rs  vscode.rs
(+29 files in other folders)
