[package]
name = "pc-snapshot"
version = "0.1.0"
edition = "2021"
default-run = "pc-snapshot"

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
xcap  = "0.0.14"
image = { version = "0.25", default-features = false, features = ["png"] }
base64 = "0.22"
sysinfo = "0.31"
tokio = { version = "1.52", features = ["io-util", "net", "rt", "sync", "time"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Accessibility",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_System_Threading",
    "Win32_System_Com",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
